--- a/tpmlwebref_chat.htm
+++ b/tpmlwebref_chat.htm
@@ -160,6 +160,25 @@
                                         <button class="btn btn-sm btn-red"><i class="i_trash invert"></i>批次不通過</button>
                                     </div-->
                                     <!-- 頁碼 -->
+                                    <!-- 批次資料處理 --><!-- 預設隱藏，有勾選check再顯示 -->
+                                    <div class="control_panel">
+                                        <div class="dropdown">
+                                            <button class="btn dropdown-btn">
+                                                <i class="i_setting"></i>批次處理</button>
+                                            <div class="dropdown-content">
+                                                <ul>
+                                                    <li>
+                                                        <button class="btn">
+                                                            <i class="i_add"></i>批次匯出</button>
+                                                    </li>
+                                                    <li>
+                                                        <button class="btn">
+                                                            <i class="i_add"></i>批次刪除下架</button>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <div class="pagination">
                                         <form action="" class="form_inline">
                                             <div class="total">
@@ -184,6 +203,7 @@
                                             <thead>
                                                 <tr>
                                                     <!--th><input type="checkbox"></th-->
+                                                    <th><input type="checkbox"></th>
                                                     <th><a href="#">序號<i class="i_sort"></i></a></th>
                                                     <th><a href="#">留言日期<i class="i_sort"></i></a></th>
                                                     <th>主要分類</th>
@@ -199,6 +219,7 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num" data-title="序號">1</td>
                                                     <td data-title="留言日期"><time>2024/6/24 <br>09:20</time></td>
                                                     <td data-title="主要分類">館藏查詢</td>
@@ -219,6 +240,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num" data-title="序號">2</td>
                                                     <td data-title="留言日期"><time>2024/6/24 <br>09:20</time></td>
                                                     <td data-title="主要分類">館藏查詢</td>
@@ -239,6 +261,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num" data-title="編號">3</td>
                                                     <td data-title="留言日期"><time>2024/6/24<br> 09:20</time></td>
                                                     <td data-title="主要分類">開館與入館</td>
@@ -259,6 +282,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num" data-title="編號">4</td>
                                                     <td data-title="留言日期"><time>2024/6/26 <br>09:20</time></td>
                                                     <td data-title="主問題">借書與還書</td>
@@ -280,6 +304,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num" data-title="編號">5</td>
                                                     <td data-title="留言日期"><time>2024/6/26 <br>09:20</time></td>
                                                     <td data-title="主要分類">學習與研究</td>
@@ -300,7 +325,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <!--td><input type="checkbox"></td-->
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num" data-title="編號">6</td>
                                                     <td data-title="留言日期"><time>2024/6/27 <br>09:20</time></td>
                                                     <td data-title="主要分類"></td>
@@ -320,7 +345,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <!--td><input type="checkbox"></td-->
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num" data-title="編號">7</td>
                                                     <td data-title="留言日期"><time>2024/6/27 <br>09:20</time></td>
                                                     <td data-title="主要分類"></td>
@@ -340,7 +365,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <!--td><input type="checkbox"></td-->
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num" data-title="編號">8</td>
                                                     <td data-title="留言日期"><time>2024/6/27 <br>09:20</time></td>
                                                     <td data-title="主要分類"></td>
@@ -360,7 +385,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <!--td><input type="checkbox"></td-->
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num" data-title="編號">9</td>
                                                     <td data-title="留言日期"><time>2024/6/27 <br>09:20</time></td>
                                                     <td data-title="主要分類"></td>
@@ -378,7 +403,7 @@
                                                                 title="檢視"></i>檢視</a>
                                                         </div>
                                                 <tr>
-                                                    <!--td><input type="checkbox"></td-->
+                                                    <td><input type="checkbox"></td>
                                                     <td class="num" data-title="編號">10</td>
                                                     <td data-title="留言日期"><time>2024/6/27 <br>09:20</time></td>
                                                     <td data-title="主要分類"></td>
