--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -74,7 +74,7 @@
                                     <div class="active">
                                         <div class="content__wrapper">
                                             <div class="_head">
-                                                <h3>問題資訊</h3>
+                                                <h3>代鍵問題資訊</h3>
                                             </div>
                                             <div class="_content">
                                                 <div class="form_grp">
@@ -83,11 +83,10 @@
                                                         <div class="radio_grp form_inline">
                                                             <label><input name="MenuUse" id="mobileMenuUse" type="radio"
                                                                     value="mobileMenuUse"
-                                                                    checked=""><span>不公開</span></label>
+                                                                    checked=""><span>公開</span></label>
                                                             <label><input name="MenuUse" id="pcMenuUse" type="radio"
-                                                                    value="pcMenuUse"><span>公開</span></label>
+                                                                    value="pcMenuUse"><span>不公開</span></label>
                                                             <div class="btn_grp">
-
                                                             </div>
                                                         </div>
                                                     </div>
@@ -106,7 +105,6 @@
                                                             <label>提問時間</label>
                                                         </div>
                                                     </div>
-
                                                     <div class="form_grp form_inline">
                                                         <div class="labelEffect">
                                                             <select id="" name="" class="dynamicCol used">
@@ -503,12 +501,11 @@
                                     </div>
                                     <div class="btn_grp">
                                         <a href="tpmlwebref_questionsearchnewemail1.htm" class="btn btn-green">暫存</a>
-                                        <a href="tpmlwebref_questionsearchnewemail2.htm" class="btn gray">取消</a>
+                                        <a href="tpmlwebref_questionsearchnewemail1.htm" class="btn btn-orange">儲存</a>
                                     </div>
                                     <div class="btn_grp">
-                                        <a href="tpmlwebref_questionsearchnewemail2.htm" class="btn btn-primary">轉介</a>
-                                        <a href="" class="btn btn-orange">陳核</a>
-
+                                        <a href="tpmlwebref_questionsearchnewemail2.htm" class="btn btn-primary">代鍵</a>
+                                        <a href="tpmlwebref_questionsearchnewemail3.htm" class="btn btn-blue">取消</a>
                                     </div>
                                 </div>
                                 <div class="block">
