--- a/tpmlwebref_questionsearchnewemail3.htm
+++ b/tpmlwebref_questionsearchnewemail3.htm
@@ -73,20 +73,43 @@
                                         <hr>
                                         <div class="labelEffect">
                                             <input name="" id="" type="text" value="" class="dynamicCol used">
-                                            <label>標題<abbr>*</abbr></label>
+                                            <label>標題1<abbr>*</abbr></label>
                                         </div>
                                         <div class="form_grp" style="margin-top:20px;">
                                             <div class="labelEffect">
                                                 <textarea class="used" disabled></textarea>
-                                                <div class="help">請輸入您的回覆內容，可換行但不接受 html 語法</div>
-                                                <label>信件內容<abbr>*</abbr></label>
+                                                <div class="help">請輸入您的回覆內容，可換行但不接受 html 語法<button
+                                                        class="btn btn-blue">引入問題描述</button></div>
+                                                <label>通知版型1<abbr>*</abbr></label>
                                             </div>
                                         </div>
-                                        <hr>
                                         <div>
-                                            <button class="btn btn-grey">通知讀者版型1</button>
-                                            <button class="btn btn-grey">通知讀者版型2</button>
-                                            <button class="btn btn-grey">通知讀者版型3</button>
+                                        </div>
+                                        <div class="labelEffect">
+                                            <input name="" id="" type="text" value="" class="dynamicCol used">
+                                            <label>標題2<abbr>*</abbr></label>
+                                        </div>
+                                        <div class="form_grp" style="margin-top:20px;">
+                                            <div class="labelEffect">
+                                                <textarea class="used" disabled></textarea>
+                                                <div class="help">請輸入您的回覆內容，可換行但不接受 html 語法<button
+                                                        class="btn btn-blue">引入問題描述</button></div>
+                                                <label>通知版型2<abbr>*</abbr></label>
+                                            </div>
+                                        </div>
+                                        <div>
+                                        </div>
+                                        <div class="labelEffect">
+                                            <input name="" id="" type="text" value="" class="dynamicCol used">
+                                            <label>標題3<abbr>*</abbr></label>
+                                        </div>
+                                        <div class="form_grp" style="margin-top:20px;">
+                                            <div class="labelEffect">
+                                                <textarea class="used" disabled></textarea>
+                                                <div class="help">請輸入您的回覆內容，可換行但不接受 html 語法<button
+                                                        class="btn btn-blue">引入問題描述</button></div>
+                                                <label>通知版型3<abbr>*</abbr></label>
+                                            </div>
                                         </div>
                                         <hr>
                                         <div class="setting_block" style="width:inherit;">
@@ -140,7 +163,9 @@
                                         <div class="btn_grp">
                                             <!--button class="btn btn-green">暫存</button-->
                                             <button class="btn">儲存(不發送)</button>
-                                            <button class="btn btn-orange">發送回覆</button>
+                                            <button class="btn btn-orange">發送版型1</button>
+                                            <button class="btn btn-primary">發送版型2</button>
+                                            <button class="btn btn-blue">發送版型3</button>
                                         </div>
                                     </div>
                                     <div class="block">
