--- a/aside_tpml.htm
+++ b/aside_tpml.htm
@@ -138,7 +138,8 @@
                     <li><a href="tpmlblind_drlist.htm"><span>(視障)博士通問答管理</span></a></li>
                     <li><a href="tpmlblind_drUserranklist.htm"><span>(視障)博士通答題清單</span></a></li>
                     <li><a href="tpmlwebref_questionsearch.htm"><span>(服務)讀者問題回覆管理</span></a></li>
-                    <li><a href="tpmlwebref_referrals.htm"><span>(服務)問題轉介回覆管理</span></a></li>
+                    <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版信件維護管理</span></a></li>
+                    <li><a href="tpmlwebref_referrals.htm"><span>(服務)轉介信箱維護管理</span></a></li>
                     <li><a href="tpmlwebref_review.htm"><span>(服務)問題審核管理</span></a></li>
                     <li><a href="tpmlwebref_chat.htm"><span>(服務)客服留言清單</span></a></li>
                     <li><a href="tpmlwebref_statistics.htm"><span>(服務)參考服務統計</span></a></li>
